aula28/04-pod-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-with-secret
spec:
  containers:
  - name: app
    image: busybox
    command: ["sh", "-c", "echo $DB_PASS && sleep 3600"]
