aula28/05-pod-volume-secure.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secure-volume
spec:
  containers:
  - name: app
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: config
      mountPath: /etc/config
      readOnly: true
  volumes:
  - name: config
    configMap:
      name: example-config
