aula28/08-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-service
spec:
  selector:
    app: backend
  ports:
  - port: 80
  type: ClusterIP
